--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>com.whh.middleware</groupId>
     <artifactId>middleware</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -16,8 +25,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.10</artifactId>
-            <version>0.10.0.1</version>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.11.0.2</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
