--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>kafka-clients</artifactId>
             <version>0.11.0.2</version>
         </dependency>
+        <!-- redis-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.3.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
@@ -53,6 +59,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
             <version>2.5.6.SEC03</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.4</version>
         </dependency>
 
     </dependencies>
